--- a/css/about.css
+++ b/css/about.css
@@ -76,16 +76,16 @@ h1{
 }
 
 .footer {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  text-align: center;
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	text-align: right;
 }
 .clearfix:after {
-  content: " ";
-  clear: both;
-  display: block;
+	content: " ";
+	clear: both;
+	display: block;
 }
 #menu{
 	display: none;
