--- a/css/services.css
+++ b/css/services.css
@@ -79,10 +79,8 @@ p{
   right: 0;
   bottom: 0;
   left: 0;
+  text-align: right;
   
-  text-align: center;
-  margin: 10px;
-  padding: 3px;
 }
 .clearfix:after {
   content: " ";
