--- a/css/about.css
+++ b/css/about.css
@@ -1,118 +1,117 @@
-}
+
 * {
-	box-sizing:border-box;
+    box-sizing: border-box;
 }
-body{
-	margin:0;
-	background-image: url("../images/woodbg.jpg");
+body {
+    margin: 0;
+    background-image: url("../images/woodbg.jpg");
 }
-#pame{
-	width: 200px;
-	height: 200px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 20px;
-	border: 10px solid lavender;
+#pame {
+    width: 200px;
+    height: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    border: 10px solid rgba(230, 230, 250, 0.6);
+    border-opacity: 0.6;
+    border-radius: 100px;
 }
-.about{
-	width: 70%;
-	display: absolute;
-	border: solid 5px lavender;
-	margin-right: auto;
-	margin-left: auto;
-	margin-bottom: 50px;
-	font-family: "shadows into light";
-	font-weight: bold;
-	font-size: 20px;
+.about {
+    width: 70%;
+    display: absolute;
+    border: solid 5px rgba(230, 230, 250, 0.6);
+    background-color: rgba(230, 230, 250, 0.6);
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 50px;
+    font-family: "shadows into light";
+    font-weight: bolder;
+    font-size: 25px;
+    
 }
-h2{
-	text-align: center;
-	font-family: "lobster two";
-	font-size: 40px;
+h2 {
+    text-align: center;
+    font-family: "lobster two";
+    font-size: 40px;
 }
-
-header{
-	margin: 10px;
-	width: 98%;
-
-	
-}
-
-}
-nav{
-	height: 100px;
-	right: 0;
-}
-nav a{
-	font-weight: bold;
-	color: black;	
-	text-decoration: none;
-	font-family: "lobster";
-	
+header {
+    margin: 10px;
+    width: 98%;
 }
 
-h1{
-	font-family: "lobster";
-	float: left;
-	margin: 0;
 }
-#button{
-	float: right;
-	margin-top: 5px;
-	margin-right: 30px;
-	width: 100px;
-	text-align: center;
+nav {
+    height: 100px;
+    right: 0;
 }
-#button:hover{
-	background-color: lavender;
-	border-radius: 10px;
-	font-size: 18px;
-	
+nav a {
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    font-family: "lobster";
 }
-#block{
-	width: 100%;
-	height: 300px;
+h1 {
+    font-family: "lobster";
+    float: left;
+    margin: 0;
 }
-
+#button {
+    float: right;
+    margin-top: 5px;
+    margin-right: 30px;
+    width: 100px;
+    text-align: center;
+}
+#button:hover {
+    background-color: lavender;
+    border-radius: 10px;
+    font-size: 18px;
+}
+#block {
+    width: 100%;
+    height: 300px;
+}
 .footer {
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	text-align: right;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: right;
 }
 .clearfix:after {
-	content: " ";
-	clear: both;
-	display: block;
+    content: " ";
+    clear: both;
+    display: block;
 }
-#menu{
-	display: none;
-}
-@media only screen and (max-width: 660px){
-	nav a {
-    float: ;
-    width: auto;
-    font-size: 15px;
+#menu {
     display: none;
+}
+@media only screen and (max-width: 660px) {
+    nav a {
+        width: auto;
+        font-size: 15px;
+        display: none;
     }
     #menu {
-    cursor: pointer;
-    position: absolute;
-    right: 20px;
-    display: block;
-    text-align: center;
-    font-size: 25px;
+        cursor: pointer;
+        position: absolute;
+        right: 20px;
+        display: block;
+        text-align: center;
+        font-size: 25px;
     }
-    #menu:hover{
-    background-color: lavender;
+    #menu:hover {
+        background-color: lavender;
     }
     nav.open a {
-    display: block;
-    
+        display: inline-block;
     }
-    nav.open a:hover{
-  	background-color: lavender;
+    #button {
+        float: none;
+    }
+    #button:hover {
+        background-color: lavender;
+        border-radius: 5px;
     }
 }
