--- a/css/home.css
+++ b/css/home.css
@@ -1,105 +1,120 @@
-
 * {
-	box-sizing:border-box;
-}
-body{
-	margin:0;
-	background-image: url("../images/woodbg.jpg");
-}
-header{
-	margin: 10px;
-	width: 98%;
-	
+    box-sizing: border-box;
 }
 
-}
-nav{
-	height: 100px;
-	right: 0;
-}
-nav a{
-	font-weight: bold;
-	color: black;	
-	text-decoration: none;
-	font-family: "lobster";
-	
+body {
+    margin: 0;
+    background-image: url("../images/woodbg.jpg");
 }
 
-h1{
-	font-family: "lobster";
-	float: left;
-	margin: 0;
+header {
+    margin: 10px;
+    width: 98%;
 }
-#button{
-	float: right;
-	margin-top: 5px;
-	margin-right: 30px;
-	width: 100px;
-	text-align: center;
+
+
 }
-#button:hover{
-	background-color: lavender;
-	border-radius: 10px;
-	font-size: 18px;
-	
+nav {
+    height: 100px;
+    right: 0;
+}
+nav a {
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    font-family: "lobster";
+}
+h1 {
+    font-family: "lobster";
+    float: left;
+    margin: 0;
+}
+#button {
+    float: right;
+    margin-top: 5px;
+    margin-right: 30px;
+    width: 100px;
+    text-align: center;
+}
+#button:hover {
+    background-color: lavender;
+    border-radius: 10px;
+    font-size: 18px;
 }
 .footer {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  margin: 10px;
-  padding: 3px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    margin: 10px;
+    padding: 3px;
 }
-
-#menu{
-	display: none;
+#menu {
+    display: none;
 }
-#slideshow{
-  width: 100%;
-  height: 400px;
-  top: 50%;
-  margin: 0 auto;
-  overflow: hidden;
+#slide {
+    border: solid 10px rgba(230, 230, 250, 0.6);
+    border-radius: 10px;
+    width: 100%;
+    height: 400px;
+}
+#slideshow {
+    width: 100%;
+    height: 400px;
+    top: 20%;
+    margin: 0 auto;
+    overflow: hidden;
+    position: absolute;
 }
 .clearfix:after {
-  content: " ";
-  clear: both;
-  display: block;
+    content: " ";
+    clear: both;
+    display: block;
 }
 .fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-  }
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+    animation-name: fade;
+    animation-duration: 1.5s;
 }
-
-@media only screen and (max-width: 660px){
-	nav a {
-    float: ;
-    width: auto;
-    font-size: 15px;
-    display: none;
+@keyframes fade {
+    from {
+        opacity: .4
     }
-    #menu {
-    cursor: pointer;
-    position: absolute;
-    right: 20px;
-    display: block;
-    text-align: center;
-    font-size: 25px;
-    }
-    #menu:hover{
-    background-color: lavender;
-    }
-    nav.open a {
-    display: block;
     
+    to {
+        opacity: 1
     }
-    nav.open a:hover{
-  	background-color: lavender;
+}
+@media only screen and (max-width: 660px) {
+    nav a {
+        width: auto;
+        font-size: 15px;
+        display: none;
+    }
+    
+    #menu {
+        cursor: pointer;
+        position: absolute;
+        right: 20px;
+        display: block;
+        text-align: center;
+        font-size: 25px;
+    }
+    
+    #menu:hover {
+        background-color: lavender;
+    }
+    
+    nav.open a {
+        display: inline-block;
+    }
+    
+    #button {
+        float: none;
+    }
+    
+    #button:hover {
+        background-color: lavender;
+        border-radius: 5px;
     }
 }
