--- a/css/home.css
+++ b/css/home.css
@@ -13,7 +13,9 @@ header {
     background: 0.6;
 }
 
-
+br{
+    display: none;
+}
 }
 nav {
     height: 100px;
@@ -88,8 +90,14 @@ h1 {
     }
 }
 @media only screen and (max-width: 660px) {
+    h1{
+        font-size: 25px;
+    }
     #slide, #slideshow{
         height: 200px;
+    }
+    #slideshow{
+        margin-top: 20px;
     }
     nav a {
         width: auto;
@@ -111,15 +119,25 @@ h1 {
     }
     
     nav.open a {
-        display: inline-block;
+        display: table-row; 
+
     }
     
-    #button {
+    a#button {
         float: none;
+        position: absolute;
+        right: 10px;   
+
     }
     
     #button:hover {
         background-color: lavender;
         border-radius: 5px;
+    }
+    .clearfix{
+        margin-bottom: 10px;
+    }
+    br{
+        display: inline-block;
     }
 }
